--- a/JavaScript/JavaScriptCallbacks.html
+++ b/JavaScript/JavaScriptCallbacks.html
@@ -7,22 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Callbacks</title>
   <script>
-    function fun1(callback) {
-      setTimeout(function () {
-        console.log('In Function 1')
-        callback()
-      }, 3000)
-    }
-
-    // function fun2() {
-    //   console.log('In Function 2')
+    // function fun1(callback) {
+    //   setTimeout(function () {
+    //     console.log('In Function 1')
+    //     callback()
+    //   }, 3000)
     // }
 
-    // fun1(fun2)
+    // // function fun2() {
+    // //   console.log('In Function 2')
+    // // }
 
-    fun1(function () {
-      console.log('In Function 2')
-    })
+    // // fun1(fun2)
+
+    // fun1(function () {
+    //   console.log('In Function 2')
+    // })
   </script>
 </head>
 
