JavaScript: Promises, DSA Problems and JS Quiz

--- a/JavaScript/JSArrayProblems2.html
+++ b/JavaScript/JSArrayProblems2.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Array Problems</title>
   <script>
-    let bankBalances = [30000, 1000, 50000, 20000, 40000]
+    let bankBalances = [30000, 10000, 50000, 20000, 40000]
 
     /* Q: Update the bankBalances in such a fashion:
     1. If first digit of amount is even, give a 20% bonus
@@ -15,6 +15,17 @@
 
     Expected O/P: [40500, 1350, 67500, 24000, 48000]
     */
+
+    // bankBalances = bankBalances.map(balance => {
+    //   if (Number(String(balance)[0]) % 2 === 0) {
+    //     balance = balance + 0.2 * balance
+    //   } else {
+    //     balance = balance + 0.35 * balance
+    //   }
+    //   return balance
+    // })
+
+    // console.log(bankBalances)
   </script>
 </head>
 
