JavaScript: Promises - pending, resolve, reject, .then, .catch, Promise Chaining, DSA Problems

--- a/JavaScript/JSArrayProblems2.html
+++ b/JavaScript/JSArrayProblems2.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Array Problems</title>
   <script>
-    let bankBalances = [30000, 10000, 50000, 20000, 40000]
+    // let bankBalances = [30000, 10000, 50000, 20000, 40000]
 
     /* Q: Update the bankBalances in such a fashion:
     1. If first digit of amount is even, give a 20% bonus
@@ -26,6 +26,13 @@
     // })
 
     // console.log(bankBalances)
+
+    let arr = [1, 3, 5, 2, 0]  // 4
+
+    let arr2 = [3, 4, 6, 0, 1, 2] // 5
+
+    /* Q - Given an array of n elements, elements can be anywhere from 0 to n [No repeating elements], find out the element which is missing in the array
+    */
   </script>
 </head>
 
