--- a/JavaScript/JavaScriptPromises.html
+++ b/JavaScript/JavaScriptPromises.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,13 @@
   <script>
     /*
     Promises:
-    4 states
+    3 states
     - Pending
-    - Resolved
+    - Resolved (Fulfilled)
     - Rejected
-    - Fulfilled
 
-    Way 1: --- pending ---- resolved --- fulfilled
-    Way 2: --- pending ---- rejected --- fulfilled    
+    Way 1: --- pending ---- resolved --- settled
+    Way 2: --- pending ---- rejected --- settled    
     */
 
     // let x = 5
@@ -71,20 +71,22 @@
     // console.log('END of the CODE')
 
 
-    const fetchProfileInformation = function () {
-      return new Promise(function(resolve, reject){
-        console.log('Fetching Information ...')
-        setTimeout(function(){
-          resolve('It took 5 secs to load the profile')
-        }, 5000)
-    })
-    }
+    // const fetchProfileInformation = function () {
+    //   return new Promise(function (resolve, reject) {
+    //     console.log('Fetching Information ...')
+    //     setTimeout(function () {
+    //       resolve('It took 5 secs to load the profile')
+    //     }, 5000)
+    //   })
+    // }
 
-    fetchProfileInformation().then(function(resolvedMessage){
-      console.log('This promise was resolved, with the message - ', resolvedMessage)
-    }).catch(function(rejectedMessage){
-      console.log('This promise was rejected, with the message - ', rejectedMessage)
-    })
+    // fetchProfileInformation().then(function (resolvedMessage) {
+    //   console.log('This promise was resolved, with the message - ', resolvedMessage)
+    // }).catch(function (rejectedMessage) {
+    //   console.log('This promise was rejected, with the message - ', rejectedMessage)
+    // }).finally(function () {
+    //   console.log('This will always get executed')
+    // })
 
     // const fetchProfileInformation = function () {
     //   console.log('Fetching Information ...')
@@ -96,7 +98,9 @@
     // console.log(fetchProfileInformation())
   </script>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
