--- a/JavaScript/JSArrayProblems2.html
+++ b/JavaScript/JSArrayProblems2.html
@@ -27,12 +27,23 @@
 
     // console.log(bankBalances)
 
-    let arr = [1, 3, 5, 2, 0]  // 4
-
-    let arr2 = [3, 4, 6, 0, 1, 2] // 5
-
     /* Q - Given an array of n elements, elements can be anywhere from 0 to n [No repeating elements], find out the element which is missing in the array
+    let arr = [1, 3, 5, 2, 0]  // 4
+    let arr2 = [3, 4, 6, 0, 1, 2] // 5
     */
+
+    // let n = arr.length
+    // arr.sort((a, b) => a - b)
+    // let i
+    // for(i = 0; i < n; i++){
+    //   if(arr[i] != i)
+    //     break
+    // }
+    // console.log(i)
+
+    // let sumOfArrayElements = arr.reduce((total, element) => total + element)
+    // let sumUpToNElements = arr.length * (arr.length + 1) / 2
+    // console.log(sumUpToNElements - sumOfArrayElements)
   </script>
 </head>
 
