--- a/JavaScript/JSArrayProblems3.html
+++ b/JavaScript/JSArrayProblems3.html
@@ -40,11 +40,52 @@
           hindi: '81',
           social: '61',
         }
+      }, 
+      {
+        name: 'Lakshman',
+        batch: 'Batch 14',
+        marks: {
+          english: '48',
+          maths: '83',
+          science: '63',
+          hindi: '71',
+          social: '63',
+        }
       }
     ]
 
     /* Q -  Return an array with total marks
     Expected O/P: [261, 258, 325]
+    */
+
+    // METHOD - 1
+    // let studentsTotalMarks = students.map((student) => {
+    //   let total = 0
+    //   for (subject in student.marks){
+    //     total = total + Number(student.marks[subject])
+    //   }
+    //   return total
+    // })
+
+    // METHOD - 2
+    // let studentsTotalMarks = students.map((student) => {
+    //   let { english, maths, science, hindi, social} = student.marks
+    //   return Number(english) + Number(maths) + Number(science) + Number(hindi) + Number(social)
+    // })
+
+    // METHOD - 3
+    // let studentsTotalMarks = students.map((student) => {
+    //   let marks = Object.values(student.marks)
+    //   return marks.reduce((total, singleMarks) => {
+    //     return total + Number (singleMarks)
+    //   }, 0)
+    // })
+
+    // console.log(studentsTotalMarks)
+
+
+    /* Q -  Return an array of student names who secured > 30 marks in all subjects
+    Expected O/P: ['Lakshman']
     */
   </script>
 </head>
