--- a/JavaScript/JSValidations.html
+++ b/JavaScript/JSValidations.html
@@ -5,10 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Validation</title>
+  <script>
+    function validate(){
+      let emailInput = document.getElementById('email-input').value
+      
+      /*
+        ank@gmail.co
+
+        1. @ symbol should be present
+        2. Atleast one character before @ symbol
+        3. After dot, there should be atleast 2 characters
+        [Additional Checks] : Shouldn't have space, not special character as first character, Atleast one character after these . - _
+      */
+
+      if(emailInput.indexOf('@') === -1)
+        console.log('Email not valid - @ missing!')
+      else if(emailInput.indexOf('@') < 1)
+        console.log('Email not valid - Atleast one character required before @ symbol!')
+      else if(emailInput.length - emailInput.lastIndexOf('.') <= 2)
+        console.log('Email not valid - After dot, there should be atleast 2 characters!')
+    }
+  </script>
 </head>
 <body>
-  <form>
-    <input type='text' placeholder='Type your email address'>
+  <form onsubmit="validate()">
+    <input type='text' placeholder='Type your email address' id='email-input'>
     <button type='submit'>Submit</button>
   </form>
 </body>
