--- a/JavaScript/JavaScriptErrorHandling.html
+++ b/JavaScript/JavaScriptErrorHandling.html
@@ -9,13 +9,13 @@
   <script>
     console.log('Start of the code')
 
-    // try {
-    //   let x = '3+5'
-    //   let z = eval(x)
-    //   console.log(a)
-    // } catch (error) {
-    //   console.log(error)
-    // }
+    try {
+      let x = '3+5'
+      let z = eval(x)
+      console.log(a)
+    } catch (error) {
+      console.log(error)
+    }
 
     try {
       let a = -10
